codex-rs/tui/tests/suite/snapshots/all__suite__focus_palette__quiet_mini_active_pty.snap
---
source: tui/tests/suite/focus_palette.rs
expression: compact_screen(&terminal.screen_contents())
---
  ycode
  ~/code/ycode
  • Running sleep 2.4
  ⠋ 2s
