codex-rs/tui/tests/suite/snapshots/all__suite__focus_palette__quiet_mini_fresh_pty.snap
---
source: tui/tests/suite/focus_palette.rs
expression: fresh
---
  ycode
  ~/code/ycode
Ask anything... "Fix a TODO in the codebase"
