codex-rs/tui/tests/suite/snapshots/all__suite__focus_palette__quiet_mini_shell_trace_pty.snap
---
source: tui/tests/suite/focus_palette.rs
expression: completed
---
  ycode
  ~/code/ycode
  • You ran sleep 2.4
    └ (no output)
  gpt-5.6-terra default · 2s
